For 1.20.3
	- EAI SF/MFString set/get reworked.
	- EAI - setting one value of MF/SF nodes did not work.
	- EAI setting MFStrings had code that could cause memory problems.
	- EAI creating EventInMFVec3f did not work - error in java code Node.java.

For 1.20.2
	- adjusted the OcclusionCulling parameters to better handle nodes with few pixels
	  visible.

	- Linux Firefox/Opera/Icecape/Mozilla plugin - reworked to prevent a possible
	  synchronization problem at plugin startup.

	- Makefile.PL automatically determines whether we are building on a 64 or 32 bit
	  Linux system, and adjusts build/install paths to suit.

	- ReWire and MIDI nodes on OSX - code now works on OSX 10.5.

	- OSX SoundEngine now detects FreeWRL abnormal shutdowns, and will send a message
	  to the console, and terminate execution.

	- Javascript "initialize()" - if parsing was required (eg, createVrmlFromString)
	  a thread lock would happen. Initialize() call moved out of parse thread to 
	  the callers thread.

	- SphereSensor, PlaneSensor, TouchSensor, CylinderSensor; on Linux, these
	  nodes would continuously send "_changed" events when the nodes were active;
	  now only sends events when values change (and, node is active)

	- ConsoleMessage had a potential memory overrun on large messages; messages
	  truncated if too large.

	- Many, many Javascript changes, especially around SFNode and MFNode implementations.

	- cleanup OSX build; remove redundant installed code from dmg.

	- comment out movie-snapshot code, pending rethink.

	- OSX running within Safari; speaking error messages sometimes hung safari; use
	  "freewrlSystem" call now, instead of "system" - seems to work well. Messages
	  also copied to the console.

	- Nodes with a "bindTime" outputOnly were not sending events correctly; fixed.

	- VRML/Classic - using SF* datatypes where MF* types were expected could lead to
	  invalid data being used - fixed.
